# sfml-app

./: .gitignore  CMakeLists.txt  README.md  build.sh  linux_build.sh  main.cpp  run.sh
.github/workflows/: build.yml
src/: consts.cpp  game.cpp  game.h  main.cpp
src/assets/: test_map.csv
src/classes/controller/: controller.cpp  controller.h
src/classes/entity/: entity.cpp  entity.h  neutral.cpp  neutral.h
src/classes/game/: game.cpp  game.h
src/classes/map/: map.cpp  map.h
src/classes/player/: player.cpp  player.h
src/classes/proc_map/: chunk.cpp  chunk.h  tile.cpp  tile.h  tile_map.cpp  tile_map.h
src/extra/: consts.cpp  consts.h  functions.h  set_textures.h  textures.h  values.cpp  values.h
